Fixed memory leak that occurs when a resource has an invalid resolution.

https://bugzilla.gnome.org/show_bug.cgi?id=674325